# fashion-review

./: .gitignore  README.md
backend/: .env.example  .render.yaml  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/ai/: client.py  deterministic.py  fallbacks.py  prompts.py  text_service.py  try_on_service.py  try_on_worker_service.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  enums.py  security.py
backend/app/domain/: __init__.py  ai_try_on_job_status.py  commerce.py  fit_class.py  language.py  order_deadline_stage.py  order_event_type.py  order_status.py  permissions.py  preorder_status.py  product_taxonomy.py  roles.py  try_on_status.py
backend/app/jobs/: __init__.py  ai_try_on_worker.py  order_sla_sweeper.py  try_on_worker.py
backend/app/models/: __init__.py  ai_asset.py  ai_call_record.py  ai_try_on_event.py  ai_try_on_job.py  bag_item.py  base.py  branch.py  collection.py  favorite.py  order.py  order_event.py  preorder_batch.py  product.py  product_translation.py  refresh_session.py  size_chart.py  try_on_session.py  user.py  wardrobe.py
backend/app/policies/: __init__.py  auth_policy.py  franchise_policy.py  production_policy.py
backend/app/repositories/: ai_call_repository.py  ai_try_on_repository.py  bag_repository.py  collection_repository.py  favorite_repository.py  order_event_repository.py  order_repository.py  preorder_batch_repository.py  preorder_repository.py  product_repository.py  refresh_session_repository.py  size_chart_repository.py  (+3 more)
backend/tests/: conftest.py
(+177 files in other folders)
